--- a/exercicio1.html
+++ b/exercicio1.html
@@ -1,2 +1,9 @@
 <h1>Tarefa 1 Criação de Layouts com Imagens Fluídas I</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Crie um layout básico com imagem responsiva que se ajuste ao tamanho da tela usando a tag picture.
+
+Utilize a tag específica indicada para o uso de imagens na página HTML.
+Defina a possível saída para 3 resoluções, 576px, 992px, e todas acima.
+A imagem deve ocupar 100% da largura do Viewport.
+ </p>
