--- a/exercicio10.html
+++ b/exercicio10.html
@@ -1,2 +1,8 @@
 <h1>Tarefa 10 Usando Media Query III</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Num arquivo CSS, defina 3 (três) chamadas de arquivos CSS usando a regra @import. 
+
+Combine testagens de orientação, largura mínima, altura, dentre outras. 
+Na combinação de testagens, use os conectores and ou or.
+ </p>
