--- a/exercicio11.html
+++ b/exercicio11.html
@@ -1,2 +1,14 @@
 <h1>Tarefa 11 Organização de elementos num layout responsivo</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Crie uma página simples responsiva com uma imagem e um texto que se ajuste ao tamanho da tela usando CSS.
+
+O layout padrão deverá ser o vertical (mobile-first) e deve apresentar a imagem na parte superior da página, seguida do texto na parte inferior.
+
+Porém, para uma determinada largura da página, quando houver espaço adequado para, o texto deve aparecer ao lado da imagem, apresentando um layout horizontal.
+
+Veja um protótipo de exemplo:
+
+
+
+ </p>
