--- a/exercicio12.html
+++ b/exercicio12.html
@@ -1,2 +1,10 @@
 <h1>Tarefa 12 Esquema de cores</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Crie uma página simples e responsiva apresentando um breve resumo sobre os benefícios da responsividade.
+
+Não implemente códigos CSS no arquivo HTML.
+Implemente estilos diferentes para o esquema de cores light e dark.
+Use textos e imagens.
+Pense Mobile-first!
+ </p>
