--- a/exercicio15.html
+++ b/exercicio15.html
@@ -3,3 +3,12 @@
   prefers-color-scheme
 </h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Utilize media queries para detectar a preferência de esquema de cores do usuário (claro ou escuro) e ajustar o estilo da página de acordo com essa preferência.
+
+No arquivo index.html, crie uma estrutura básica de HTML com um container principal que contém três seções diferentes: um cabeçalho (header), um conteúdo principal (main), e um rodapé (footer).
+No arquivo style.css, use media queries para aplicar estilos diferentes dependendo do valor do recurso de mídia prefers-color-scheme. Adicione estilos específicos para os esquemas de cores light (claro) e dark (escuro).
+Utilize media queries para os dois possíveis estados de prefers-color-scheme: light (claro) e dark (escuro).
+Adicione estilos personalizados para cada estado de esquema de cores para mostrar como o layout e a aparência mudam.
+Garanta que o layout seja adaptativo, mostrando estilos distintos conforme a preferência de esquema de cores do usuário.
+ </p>
