--- a/exercicio16.html
+++ b/exercicio16.html
@@ -1,3 +1,13 @@
 <h1>Tarefa 16 Transmutação Mobile-First</h1>
 
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Você recebeu o wireframe a seguir e precisa implementá-lo apenas na versão mobile. Faça a transmutação para mobile, definindo cores e elementos para a composição do projeto, visualmente simples, porém, somente a versão mobile para Iphone de 414px de largura em resolução.
+
+Você deve fazer as suas escolhas de cores, imagens e textos.
+Entregue arquivos HTML e CSS testáveis na resolução solicitada.
+A borda é meramente ilustrativa.
+Pense Mobile-first! Execute Mobile-first!
+
+
+ </p>
