--- a/exercicio2.html
+++ b/exercicio2.html
@@ -1,2 +1,9 @@
 <h1>Tarefa 2 Criação de Layouts com Imagens Fluídas II</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Crie um layout básico com imagem responsiva que se ajuste ao tamanho da tela usando CSS.
+
+Utilize a tag img na página HTML.
+Utilize adequadamente no CSS, a propriedade max-width para atender a todas as resoluções.
+A imagem deve ocupar 100% da largura do Viewport.
+ </p>
