--- a/exercicio3.html
+++ b/exercicio3.html
@@ -1,2 +1,12 @@
 <h1>Tarefa 3 Organização de elementos em um layout responsivo I</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Reproduza o layout da imagem, aplicando as técnicas de Mobile-first, usando Flexbox.
+
+Reproduza conforme a imagem, organizando e distribuindo os elementos com Flexbox.
+Não use CSS no arquivo HTML. 
+O Container principal deve ocupar 100% da largura do Viewport, sendo que esta deve ser de até 576px.
+A borda é apenas ilustrativa.
+
+
+ </p>
