--- a/exercicio4.html
+++ b/exercicio4.html
@@ -1,2 +1,13 @@
 <h1>Tarefa 4 Organização de elementos em um layout responsivo II</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Reproduza o layout da imagem, organizando o container com duas seções na vertical (menu e apresentação) e duas na horizontal (a seção de apresentação deve ser dividida entre textos e imagem).
+
+Reproduza conforme a imagem, organizando e distribuindo os elementos com Flexbox.
+Não use CSS no arquivo HTML. 
+O Container principal deve ocupar 100% da largura do Viewport.
+Use Media Query para ajustar o conteúdo do exercício anterior, para visualizações a partir de 992px.
+A borda é meramente ilustrativa.
+
+
+ </p>
