--- a/exercicio8.html
+++ b/exercicio8.html
@@ -1,2 +1,7 @@
 <h1>Tarefa 8 Usando Media Query I</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Criar um arquivo CSS e defina 5 (Cinco) breakpoints com media queries para diferentes tamanhos de dispositivos. 
+
+Defina do menor para o maior, aplicando mobile-first.
+ </p>
