--- a/exercicio9.html
+++ b/exercicio9.html
@@ -1,2 +1,8 @@
 <h1>Tarefa 9 Usando Media Query II</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Num arquivo HTML, defina 3 (três) arquivos CSS a serem chamados pela tag link.
+
+Use o atributo media.
+Uma das tags link deve estar apropriada para um arquivo css de impressão.
+ </p>
