--- a/exercicio14.html
+++ b/exercicio14.html
@@ -1,2 +1,12 @@
 <h1>Tarefa 14 Utilizando Media Queries para o Recurso de Mídia hover</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Utilize media queries para detectar se um dispositivo de entrada permite ou não que o usuário passe o mouse (hover) sobre os elementos, e ajustar os estilos da página com base nessa capacidade. 
+
+No arquivo index.html, crie uma estrutura básica de HTML com um container principal que contém dois botões. Cada botão terá uma ação visual diferente dependendo da capacidade do dispositivo de realizar um hover.
+No arquivo style.css, use media queries para aplicar estilos diferentes aos botões com base no valor do recurso de mídia hover. Adicione estilos específicos para os estados none e hover.
+Teste a página em diferentes dispositivos ou usando ferramentas de desenvolvedor do navegador para simular diferentes tipos de dispositivos de entrada.
+Utilize media queries para cada um dos dois estados possíveis de hover: none (quando o dispositivo não permite hover) e hover (quando o dispositivo permite hover).
+Adicione estilos personalizados para cada estado de hover para mostrar como a aparência dos botões muda.
+Garanta que o layout seja adaptativo, mostrando estilos distintos conforme a capacidade de hover do dispositivo de entrada detectado.
+ </p>
