--- a/exercicio5.html
+++ b/exercicio5.html
@@ -2,3 +2,14 @@
   Tarefa 5 Organização de elementos em um layout responsivo III - Centralização
 </h1>
 <a href="index.html">Voltar ao Inicio</a>
+<p> 
+Criar um layout responsivo onde os elementos são centralizados vertical e horizontalmente em um container. Use display:grid para centralizar conteúdo de maneira eficaz em diferentes tamanhos de tela.
+
+Crie um arquivo HTML e um arquivo CSS. 
+Sua estrutura básica no arquivo HTML deve conter um elemento Container e três elementos filhos. 
+Alinhe os elementos filhos ao centro do container pai. 
+O container principal deve ter um fundo de cor diferente para evidenciar o espaço ocupado.
+No arquivo CSS, defina estilos para o container principal de forma que ele ocupe 100% da altura da tela e use grid para centralizar os elementos internos vertical e horizontalmente.
+Cada elemento interno deve ter tamanhos variados e cores diferentes.
+Ao redimensionar a janela do navegador, os elementos devem permanecer centralizados e o layout deve se adaptar para telas menores (ex.: mudar de um layout horizontal para vertical).
+ </p>
