--- a/exercicio10.html
+++ b/exercicio10.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 10 Usando Media Query III</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
