--- a/exercicio11.html
+++ b/exercicio11.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 11 Organização de elementos num layout responsivo</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
