--- a/exercicio13.html
+++ b/exercicio13.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 13 Utilizando Media Queries para o Recurso de Media pointer</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
