--- a/exercicio14.html
+++ b/exercicio14.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 14 Utilizando Media Queries para o Recurso de Mídia hover</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
