--- a/exercicio15.html
+++ b/exercicio15.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>
   Tarefa 15 Utilizando Media Queries para o Recurso de Mídia
   prefers-color-scheme
