--- a/exercicio16.html
+++ b/exercicio16.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 16 Transmutação Mobile-First</h1>
 
 <a href="index.html">Voltar ao Inicio</a>
