--- a/exercicio2.html
+++ b/exercicio2.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 2 Criação de Layouts com Imagens Fluídas II</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
