--- a/exercicio4.html
+++ b/exercicio4.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 4 Organização de elementos em um layout responsivo II</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
