--- a/exercicio5.html
+++ b/exercicio5.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>
   Tarefa 5 Organização de elementos em um layout responsivo III - Centralização
 </h1>
