--- a/exercicio6.html
+++ b/exercicio6.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 6 Construindo um layout básico com CSS Grid</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
