--- a/exercicio7.html
+++ b/exercicio7.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 7 Ajustando a Responsividade com a Tag <meta /> "viewport"</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
