--- a/exercicio9.html
+++ b/exercicio9.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 9 Usando Media Query II</h1>
 <a href="index.html">Voltar ao Inicio</a>
 <p> 
