--- a/exercicio2.html
+++ b/exercicio2.html
@@ -1,6 +1,10 @@
 <link rel="stylesheet" href="styles.css" />
 <h1>Tarefa 2 Criação de Layouts com Imagens Fluídas II</h1>
 <a href="index.html">Voltar ao Inicio</a>
+<img
+  class="ex2"
+  src="https://rollingstone.com.br/media/uploads/rick_astley_reproducao.jpg"
+/>
 <p> 
 Crie um layout básico com imagem responsiva que se ajuste ao tamanho da tela usando CSS.
 
