--- a/exercicio3.html
+++ b/exercicio3.html
@@ -1,13 +1,25 @@
 <link rel="stylesheet" href="styles.css" />
-<h1>Tarefa 3 Organização de elementos em um layout responsivo I</h1>
-<a href="index.html">Voltar ao Inicio</a>
-<p> 
-Reproduza o layout da imagem, aplicando as técnicas de Mobile-first, usando Flexbox.
+<div style="background-color: #707070">
+    <h1>Tarefa 3 Organização de elementos em um layout responsivo I</h1>
+    <a href="index.html">Voltar ao Inicio</a>    
+</div>
 
-Reproduza conforme a imagem, organizando e distribuindo os elementos com Flexbox.
-Não use CSS no arquivo HTML. 
-O Container principal deve ocupar 100% da largura do Viewport, sendo que esta deve ser de até 576px.
-A borda é apenas ilustrativa.
+<div class="ex3 container">
+  <img
+    class="ex3 photo"
+    src="https://avatars.githubusercontent.com/u/63772137?v=4"
+  />
+  <h1 class="ex3 title">Hi, im Cicero, a back end developer</h1>
+  <p class="ex3 text">
+    Reproduza o layout da imagem, aplicando as técnicas de Mobile-first, usando
+    Flexbox. Reproduza conforme a imagem, organizando e distribuindo os elementos
+    com Flexbox. Não use CSS no arquivo HTML. O Container principal deve ocupar
+    100% da largura do Viewport, sendo que esta deve ser de até 576px. A borda é
+    apenas ilustrativa.
+  </p>
+  <a class="ex3 buttonLink" 
+    href="https://github.com/jvcmtr"> 
+    CHECK OUT MY GITHUB
+  </a>
+</div>
 
-
- </p>
