--- a/exercicio4.html
+++ b/exercicio4.html
@@ -1,14 +1,26 @@
 <link rel="stylesheet" href="styles.css" />
-<h1>Tarefa 4 Organização de elementos em um layout responsivo II</h1>
-<a href="index.html">Voltar ao Inicio</a>
-<p> 
-Reproduza o layout da imagem, organizando o container com duas seções na vertical (menu e apresentação) e duas na horizontal (a seção de apresentação deve ser dividida entre textos e imagem).
+<div style="background-color: #707070">
+    <h1>Tarefa 4 Organização de elementos em um layout responsivo II</h1>
+    <a href="index.html">Voltar ao Inicio</a>    
+</div>
 
-Reproduza conforme a imagem, organizando e distribuindo os elementos com Flexbox.
-Não use CSS no arquivo HTML. 
-O Container principal deve ocupar 100% da largura do Viewport.
-Use Media Query para ajustar o conteúdo do exercício anterior, para visualizações a partir de 992px.
-A borda é meramente ilustrativa.
-
-
- </p>
+<div class="ex4 container">
+  <div class="ex4 text-container">
+    <h1 class="ex4 title">Hi, im Cicero, a back end developer</h1>
+    <p class="ex4 text">
+        Reproduza conforme a imagem, organizando e distribuindo os elementos com Flexbox.
+        Não use CSS no arquivo HTML. 
+        O Container principal deve ocupar 100% da largura do Viewport.
+        Use Media Query para ajustar o conteúdo do exercício anterior, para visualizações a partir de 992px.
+        A borda é meramente ilustrativa.
+    </p>
+    <a class="ex4 buttonLink" 
+      href="https://github.com/jvcmtr"> 
+      CHECK OUT MY GITHUB
+    </a>
+  </div>
+  <img
+  class="ex4 photo"
+  src="https://avatars.githubusercontent.com/u/63772137?v=4"
+  />
+</div>
