--- a/exercicio5.html
+++ b/exercicio5.html
@@ -14,3 +14,8 @@ No arquivo CSS, defina estilos para o container principal de forma que ele ocupe
 Cada elemento interno deve ter tamanhos variados e cores diferentes.
 Ao redimensionar a janela do navegador, os elementos devem permanecer centralizados e o layout deve se adaptar para telas menores (ex.: mudar de um layout horizontal para vertical).
  </p>
+ <div class="ex5 container">
+    <div class="ex5 child"></div>
+    <div class="ex5 child"></div>
+    <div class="ex5 child"></div>
+ </div>
