--- a/exercicio6.html
+++ b/exercicio6.html
@@ -1,12 +1,39 @@
 <link rel="stylesheet" href="styles.css" />
-<h1>Tarefa 6 Construindo um layout básico com CSS Grid</h1>
-<a href="index.html">Voltar ao Inicio</a>
-<p> 
-Criar um layout responsivo com CSS Grid contendo áreas de cabeçalho, uma barra lateral, um conteúdo principal e um rodapé.
-
-Crie uma estrutura básica em HTML, com elementos header, nav, main, aside e footer.
-Defina o container principal como um grid com 3 colunas e pelo menos 3 linhas.
-O cabeçalho e o rodapé devem ocupar todas as colunas, sendo a primeira e última linha, respectivamente.
-A barra lateral deve ocupar a primeira coluna, o conteúdo principal a segunda, e a terceira coluna pode ser vazia ou usada para elementos adicionais.
-Adicione um fundo de cor diferente para cada área para facilitar a visualização do layout.
- </p>
+ <div class="ex6 container">
+    <header class="ex6">
+        <h1>Tarefa 6 Construindo um layout básico com CSS Grid</h1>
+    </header>
+    <nav class="ex6">
+        <a href="exercicio1.html">Exercício 1</a>
+        <a href="exercicio2.html">Exercício 2</a>
+        <a href="exercicio3.html">Exercício 3</a>
+        <a href="exercicio4.html">Exercício 4</a>
+        <a href="exercicio5.html">Exercício 5</a>
+        <a href="exercicio6.html">Exercício 6</a>
+        <a href="exercicio7.html">Exercício 7</a>
+        <a href="exercicio8.html">Exercício 8</a>
+        <a href="exercicio9.html">Exercício 9</a>
+        <a href="exercicio10.html">Exercício 10</a>
+        <a href="exercicio11.html">Exercício 11</a>
+        <a href="exercicio12.html">Exercício 12</a>
+        <a href="exercicio13.html">Exercício 13</a>
+        <a href="exercicio14.html">Exercício 14</a>
+        <a href="exercicio15.html">Exercício 15</a>
+        <a href="exercicio16.html">Exercício 16</a>
+    </nav>
+    <main class="ex6">
+        <p> 
+            Criar um layout responsivo com CSS Grid contendo áreas de cabeçalho, uma barra lateral, um conteúdo principal e um rodapé.
+            
+            Crie uma estrutura básica em HTML, com elementos header, nav, main, aside e footer.
+            Defina o container principal como um grid com 3 colunas e pelo menos 3 linhas.
+            O cabeçalho e o rodapé devem ocupar todas as colunas, sendo a primeira e última linha, respectivamente.
+            A barra lateral deve ocupar a primeira coluna, o conteúdo principal a segunda, e a terceira coluna pode ser vazia ou usada para elementos adicionais.
+            Adicione um fundo de cor diferente para cada área para facilitar a visualização do layout.
+        </p>
+    </main>
+    <aside class="ex6">
+        <a href="index.html">Voltar ao Inicio</a>
+    </aside>
+    <footer class="ex6">Rodape</footer>
+</div>
