--- a/exercicio7.html
+++ b/exercicio7.html
@@ -1,13 +1,42 @@
-<link rel="stylesheet" href="styles.css" />
-<h1>Tarefa 7 Ajustando a Responsividade com a Tag <meta /> "viewport"</h1>
-<a href="index.html">Voltar ao Inicio</a>
-<p> 
-Usando o arquivo do exercício anterior, defina a tag meta com os atributos: name="viewport", content="width=device-width, initial-scale=1.0". 
+ <link rel="stylesheet" href="styles.css" />
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <div class="ex6 container">
+    <header class="ex6">
+        <h1>Tarefa 7 Ajustando a Responsividade com a Tag &lt;meta /&gt;"viewport"</h1>
+    </header>
+    <nav class="ex6">
+        <a href="exercicio1.html">Exercício 1</a>
+        <a href="exercicio2.html">Exercício 2</a>
+        <a href="exercicio3.html">Exercício 3</a>
+        <a href="exercicio4.html">Exercício 4</a>
+        <a href="exercicio5.html">Exercício 5</a>
+        <a href="exercicio6.html">Exercício 6</a>
+        <a href="exercicio7.html">Exercício 7</a>
+        <a href="exercicio8.html">Exercício 8</a>
+        <a href="exercicio9.html">Exercício 9</a>
+        <a href="exercicio10.html">Exercício 10</a>
+        <a href="exercicio11.html">Exercício 11</a>
+        <a href="exercicio12.html">Exercício 12</a>
+        <a href="exercicio13.html">Exercício 13</a>
+        <a href="exercicio14.html">Exercício 14</a>
+        <a href="exercicio15.html">Exercício 15</a>
+        <a href="exercicio16.html">Exercício 16</a>
+    </nav>
+    <main class="ex6">
+        <p> 
+            Usando o arquivo do exercício anterior, defina a tag meta com os atributos: name="viewport", content="width=device-width, initial-scale=1.0". 
 
-Teste sua página em diferentes resoluções.
-
-Remova a tag <meta> "viewport" e observe como o layout da página é afetado em dispositivos móveis. Descreva em um parágrafo no main, resumidamente, o que você observou mudar.
-Modifique o valor de “ Initial-scale” para ver como o zoom inicial da página muda em dispositivos móveis. Teste e descreva mais uma parágrafo no main destacando o que você observou mudar.
-Experimente outros valores para content, como width=500 ou initial-scale=2, e observe as mudanças no layout. Descreva em outro parágrafo no main, quais mudanças você observou.
-Seu arquivo main terá 3 parágrafos, conforme solicitado acima.
- </p>
+            Teste sua página em diferentes resoluções.
+            
+            Remova a tag 1 &lt;meta&gt; "viewport" e observe como o layout da página é afetado em dispositivos móveis. Descreva em um parágrafo no main, resumidamente, o que você observou mudar.
+            Modifique o valor de “ Initial-scale” para ver como o zoom inicial da página muda em dispositivos móveis. Teste e descreva mais uma parágrafo no main destacando o que você observou mudar.
+            Experimente outros valores para content, como width=500 ou initial-scale=2, e observe as mudanças no layout. Descreva em outro parágrafo no main, quais mudanças você observou.
+            Seu arquivo main terá 3 parágrafos, conforme solicitado acima.
+        </p>
+    </main>
+    <aside class="ex6">
+        <a href="index.html">Voltar ao Inicio</a>
+    </aside>
+    <footer class="ex6">Rodape</footer>
+</div>
+</meta>
