--- a/exercicio15.html
+++ b/exercicio15.html
@@ -1,10 +1,31 @@
+
 <link rel="stylesheet" href="styles.css" />
-<h1>
-  Tarefa 15 Utilizando Media Queries para o Recurso de Mídia
-  prefers-color-scheme
-</h1>
-<a href="index.html">Voltar ao Inicio</a>
-<p> 
+
+<div class="nav-container">
+  <h1>Tarefa 15 Utilizando Media Queries para o Recurso de Mídia prefers-color-scheme</h1>
+  <nav>
+    <ul class="nav-list">
+      <li><a href="exercicio1.html">Exercício 1</a></li>
+      <li><a href="exercicio2.html">Exercício 2</a></li>
+      <li><a href="exercicio3.html">Exercício 3</a></li>
+      <li><a href="exercicio4.html">Exercício 4</a></li>
+      <li><a href="exercicio5.html">Exercício 5</a></li>
+      <li><a href="exercicio6.html">Exercício 6</a></li>
+      <li><a href="exercicio7.html">Exercício 7</a></li>
+      <li><a href="exercicio8.html">Exercício 8</a></li>
+      <li><a href="exercicio9.html">Exercício 9</a></li>
+      <li><a href="exercicio10.html">Exercício 10</a></li>
+      <li><a href="exercicio11.html">Exercício 11</a></li>
+      <li><a href="exercicio12.html">Exercício 12</a></li>
+      <li><a href="exercicio13.html">Exercício 13</a></li>
+      <li><a href="exercicio14.html">Exercício 14</a></li>
+      <li><a href="exercicio15.html">Exercício 15</a></li>
+      <li><a href="exercicio16.html">Exercício 16</a></li>
+    </ul>
+  </nav>
+</div>
+<p>
+
 Utilize media queries para detectar a preferência de esquema de cores do usuário (claro ou escuro) e ajustar o estilo da página de acordo com essa preferência.
 
 No arquivo index.html, crie uma estrutura básica de HTML com um container principal que contém três seções diferentes: um cabeçalho (header), um conteúdo principal (main), e um rodapé (footer).
