--- a/exercicio2.html
+++ b/exercicio2.html
@@ -1,6 +1,28 @@
 <link rel="stylesheet" href="styles.css" />
-<h1>Tarefa 2 Criação de Layouts com Imagens Fluídas II</h1>
-<a href="index.html">Voltar ao Inicio</a>
+
+<div style="background-color: #404040; color: #fff;">
+  <h1> Tarefa 2 Criação de Layouts com Imagens Fluídas II</h1>
+  <nav>
+    <ul class="nav-list">
+      <li><a href="exercicio1.html">Exercício 1</a></li>
+      <li><a href="exercicio2.html">Exercício 2</a></li>
+      <li><a href="exercicio3.html">Exercício 3</a></li>
+      <li><a href="exercicio4.html">Exercício 4</a></li>
+      <li><a href="exercicio5.html">Exercício 5</a></li>
+      <li><a href="exercicio6.html">Exercício 6</a></li>
+      <li><a href="exercicio7.html">Exercício 7</a></li>
+      <li><a href="exercicio8.html">Exercício 8</a></li>
+      <li><a href="exercicio9.html">Exercício 9</a></li>
+      <li><a href="exercicio10.html">Exercício 10</a></li>
+      <li><a href="exercicio11.html">Exercício 11</a></li>
+      <li><a href="exercicio12.html">Exercício 12</a></li>
+      <li><a href="exercicio13.html">Exercício 13</a></li>
+      <li><a href="exercicio14.html">Exercício 14</a></li>
+      <li><a href="exercicio15.html">Exercício 15</a></li>
+      <li><a href="exercicio16.html">Exercício 16</a></li>
+    </ul>
+  </nav>
+</div>
 <img
   class="ex2"
   src="https://rollingstone.com.br/media/uploads/rick_astley_reproducao.jpg"
