--- a/exercicio7.html
+++ b/exercicio7.html
@@ -1,5 +1,5 @@
  <link rel="stylesheet" href="styles.css" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <!-- meta name="viewport" content="width: 500; initial-scale: 0.2"/ -->
  <div class="ex6 container">
     <header class="ex6">
         <h1>Tarefa 7 Ajustando a Responsividade com a Tag &lt;meta /&gt;"viewport"</h1>
@@ -33,10 +33,18 @@
             Experimente outros valores para content, como width=500 ou initial-scale=2, e observe as mudanças no layout. Descreva em outro parágrafo no main, quais mudanças você observou.
             Seu arquivo main terá 3 parágrafos, conforme solicitado acima.
         </p>
+        <p style="color: #000060">
+            O texto que compõem a tela ficou maior e, quando se diminui o tamanho da tela, o tamanho do texto diminui proporcionalmente. 
+        </p>
+        <p style="color: #000060">
+            Não observei diferença
+        </p>
+        <p style="color: #000060">
+            Não observei diferença
+        </p>
     </main>
     <aside class="ex6">
         <a href="index.html">Voltar ao Inicio</a>
     </aside>
     <footer class="ex6">Rodape</footer>
 </div>
-</meta>
