--- a/exercicio8.html
+++ b/exercicio8.html
@@ -1,6 +1,5 @@
-
 <link rel="stylesheet" href="styles.css" />
-
+<link rel="stylesheet" href="exercicio8.css" />
 <div class="nav-container">
   <h1>Tarefa 8 Usando Media Query I</h1>
   <nav>
@@ -25,8 +24,11 @@
   </nav>
 </div>
 <p>
-
 Criar um arquivo CSS e defina 5 (Cinco) breakpoints com media queries para diferentes tamanhos de dispositivos. 
-
 Defina do menor para o maior, aplicando mobile-first.
  </p>
+
+ <p style="color: #000060">
+  fonte dos breakpoints: <a href="https://www.browserstack.com/guide/responsive-design-breakpoints">browserstack.com/guide/responsive-design-breakpoints</a>
+ </p>
+ <div class="ex8-div">
