--- a/ex10/exercicio10.html
+++ b/ex10/exercicio10.html
@@ -1,5 +1,6 @@
 
 <link rel="stylesheet" href="../styles.css" />
+<link rel="stylesheet" href="exercicio10.main.css" />
 
 <div class="nav-container">
   <h1>Tarefa 10 Usando Media Query III</h1>
@@ -30,4 +31,8 @@ Num arquivo CSS, defina 3 (três) chamadas de arquivos CSS usando a regra @impor
 
 Combine testagens de orientação, largura mínima, altura, dentre outras. 
 Na combinação de testagens, use os conectores and ou or.
- </p>
+</p>
+<div class="ex10-container">
+  <div class="ex10 r">
+  </div>
+</div>
