--- a/ex11/exercicio11.html
+++ b/ex11/exercicio11.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="./exercicio11.css" />
 <link rel="stylesheet" href="../styles.css" />
 
 <div class="nav-container">
@@ -24,16 +24,21 @@
     </ul>
   </nav>
 </div>
-<p>
 
-Crie uma página simples responsiva com uma imagem e um texto que se ajuste ao tamanho da tela usando CSS.
-
-O layout padrão deverá ser o vertical (mobile-first) e deve apresentar a imagem na parte superior da página, seguida do texto na parte inferior.
-
-Porém, para uma determinada largura da página, quando houver espaço adequado para, o texto deve aparecer ao lado da imagem, apresentando um layout horizontal.
-
-Veja um protótipo de exemplo:
-
-
-
- </p>
+ <div class="ex11 container">
+  <img
+  class="ex11 photo"
+  src="https://avatars.githubusercontent.com/u/63772137?v=4"
+  />
+  <div class="ex11 text-container">
+    <p class="ex11 text">
+      Crie uma página simples responsiva com uma imagem e um texto que se ajuste ao tamanho da tela usando CSS.
+      O layout padrão deverá ser o vertical (mobile-first) e deve apresentar a imagem na parte superior da página, seguida do texto na parte inferior.
+      Porém, para uma determinada largura da página, quando houver espaço adequado para, o texto deve aparecer ao lado da imagem, apresentando um layout horizontal.
+      Veja um protótipo de exemplo:
+    </p>
+    <p class="ex11 text">
+      Esta transição é feita com flex wrap
+    </p>
+  </div>
+</div>
