--- a/ex10/exercicio10.html
+++ b/ex10/exercicio10.html
@@ -25,8 +25,7 @@
     </ul>
   </nav>
 </div>
-<p>
-
+<p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
 Num arquivo CSS, defina 3 (três) chamadas de arquivos CSS usando a regra @import. 
 
 Combine testagens de orientação, largura mínima, altura, dentre outras. 
