--- a/ex2/exercicio2.html
+++ b/ex2/exercicio2.html
@@ -23,14 +23,14 @@
     </ul>
   </nav>
 </div>
-<img
-  class="ex2"
-  src="https://rollingstone.com.br/media/uploads/rick_astley_reproducao.jpg"
-/>
-<p> 
+<p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
 Crie um layout básico com imagem responsiva que se ajuste ao tamanho da tela usando CSS.
 
 Utilize a tag img na página HTML.
 Utilize adequadamente no CSS, a propriedade max-width para atender a todas as resoluções.
 A imagem deve ocupar 100% da largura do Viewport.
  </p>
+<img
+  class="ex2"
+  src="https://rollingstone.com.br/media/uploads/rick_astley_reproducao.jpg"
+/>
