--- a/ex5/exercicio5.html
+++ b/ex5/exercicio5.html
@@ -24,7 +24,7 @@
   </nav>
 </div>
 
-<p> 
+<p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
 Criar um layout responsivo onde os elementos são centralizados vertical e horizontalmente em um container. Use display:grid para centralizar conteúdo de maneira eficaz em diferentes tamanhos de tela.
 
 Crie um arquivo HTML e um arquivo CSS. 
