--- a/ex6/exercicio6.html
+++ b/ex6/exercicio6.html
@@ -22,7 +22,7 @@
         <a href="../ex16/exercicio16.html">Exercício 16</a>
     </nav>
     <main class="ex6">
-        <p> 
+        <p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
             Criar um layout responsivo com CSS Grid contendo áreas de cabeçalho, uma barra lateral, um conteúdo principal e um rodapé.
             
             Crie uma estrutura básica em HTML, com elementos header, nav, main, aside e footer.
