--- a/ex7/exercicio7.html
+++ b/ex7/exercicio7.html
@@ -23,7 +23,7 @@
         <a href="../ex16/exercicio16.html">Exercício 16</a>
     </nav>
     <main class="ex6">
-        <p> 
+        <p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
             Usando o arquivo do exercício anterior, defina a tag meta com os atributos: name="viewport", content="width=device-width, initial-scale=1.0". 
 
             Teste sua página em diferentes resoluções.
