--- a/ex8/exercicio8.html
+++ b/ex8/exercicio8.html
@@ -23,10 +23,10 @@
     </ul>
   </nav>
 </div>
-<p>
+<p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
 Criar um arquivo CSS e defina 5 (Cinco) breakpoints com media queries para diferentes tamanhos de dispositivos. 
 Defina do menor para o maior, aplicando mobile-first.
- </p>
+</p>
 
  <p style="color: #000060">
   fonte dos breakpoints: <a href="https://www.browserstack.com/guide/responsive-design-breakpoints">browserstack.com/guide/responsive-design-breakpoints</a>
