--- a/ex9/exercicio9.html
+++ b/ex9/exercicio9.html
@@ -26,7 +26,7 @@
      </ul>
    </nav>
  </div>
- <p>
+ <p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
   Num arquivo HTML, defina 3 (três) arquivos CSS a serem chamados pela tag link.
 
   Use o atributo media.
