--- a/ex1/exercicio1.html
+++ b/ex1/exercicio1.html
@@ -23,7 +23,12 @@
     </ul>
   </nav>
 </div>
-
+<p style="padding:15px; margin:15px; background-color:#fff; border-radius : 10px;">
+  Crie um layout básico com imagem responsiva que se ajuste ao tamanho da tela
+  usando a tag picture. Utilize a tag específica indicada para o uso de imagens
+  na página HTML. Defina a possível saída para 3 resoluções, 576px, 992px, e
+  todas acima. A imagem deve ocupar 100% da largura do Viewport.
+</p>
 <div class="ex1">
   <picture class="ex1">
     <source class="ex1"
@@ -39,9 +44,3 @@
     />
   </picture>
 </div>
-<p>
-  Crie um layout básico com imagem responsiva que se ajuste ao tamanho da tela
-  usando a tag picture. Utilize a tag específica indicada para o uso de imagens
-  na página HTML. Defina a possível saída para 3 resoluções, 576px, 992px, e
-  todas acima. A imagem deve ocupar 100% da largura do Viewport.
-</p>
